--- a/environment.yml
+++ b/environment.yml
@@ -4,348 +4,247 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _ipython_minor_entry_point=8.7.0
-  - appnope=0.1.3
-  - argon2-cffi=21.3.0
-  - argon2-cffi-bindings=21.2.0
-  - asttokens=2.2.1
-  - attrs=21.4.0
-  - backcall=0.2.0
-  - backports=1.0
-  - backports.functools_lru_cache=1.6.4
-  - beautifulsoup4=4.11.1
-  - bleach=5.0.1
-  - bottleneck=1.3.2
-  - brotli=1.0.9
-  - brotli-bin=1.0.9
-  - brotlipy=0.7.0
-  - bzip2=1.0.8
-  - ca-certificates=2022.12.7
-  - cctools_osx-64=973.0.1
-  - certifi=2022.12.7
-  - cffi=1.15.1
-  - chardet=4.0.0
-  - charset-normalizer=2.0.10
-  - clang=11.1.0
-  - clang-11=11.1.0
-  - clang_osx-64=11.1.0
-  - clangxx=11.1.0
-  - clangxx_osx-64=11.1.0
-  - click=8.0.3
-  - colorama=0.4.4
-  - compiler-rt=11.1.0
-  - compiler-rt_osx-64=11.1.0
-  - cryptography=36.0.0
-  - cvxopt=1.2.7
-  - cycler=0.11.0
-  - decorator=5.1.1
-  - defusedxml=0.7.1
-  - dill=0.3.5.1
-  - dsdp=5.8
-  - entrypoints=0.4
-  - executing=1.2.0
-  - fftw=3.3.10
-  - flit-core=3.8.0
-  - fonttools=4.29.0
-  - freetype=2.10.4
-  - gettext=0.21.1
-  - giflib=5.2.1
-  - glib=2.69.1
-  - glpk=4.65
-  - gmp=6.2.1
-  - gsl=2.7
-  - gst-plugins-base=1.14.0
-  - gstreamer=1.14.0
-  - icu=58.2
-  - idna=3.3
-  - importlib-metadata=4.10.1
-  - importlib_metadata=4.10.1
-  - importlib_resources=5.10.2
-  - iniconfig=1.1.1
-  - ipykernel=5.5.5
-  - ipython=8.7.0
-  - ipython_genutils=0.2.0
-  - ipywidgets=8.0.4
-  - jedi=0.18.2
-  - jinja2=3.1.2
-  - joblib=1.1.0
-  - jpeg=9e
-  - jsonpickle=2.1.0
-  - jsonschema=4.17.3
-  - jupyter=1.0.0
-  - jupyter_client=7.0.6
-  - jupyter_console=6.4.4
-  - jupyter_core=4.12.0
-  - jupyterlab_pygments=0.2.2
-  - jupyterlab_widgets=3.0.5
-  - kiwisolver=1.3.2
-  - krb5=1.19.3
-  - lcms2=2.12
-  - ld64_osx-64=609
-  - libblas=3.9.0
-  - libbrotlicommon=1.0.9
-  - libbrotlidec=1.0.9
-  - libbrotlienc=1.0.9
-  - libcblas=3.9.0
-  - libclang=12.0.0
-  - libclang-cpp11.1=11.1.0
-  - libcxx=12.0.1
-  - libdeflate=1.9
-  - libedit=3.1.20191231
-  - libffi=3.3
-  - libgfortran=5.0.0
-  - libgfortran5=9.3.0
-  - libgpuarray=0.7.6
-  - libiconv=1.17
-  - liblapack=3.9.0
-  - libllvm11=11.1.0
-  - libllvm12=12.0.1
-  - libmagic=5.39
-  - libopenblas=0.3.18
-  - libpng=1.6.37
-  - libpq=12.9
-  - libsodium=1.0.18
-  - libtiff=4.2.0
-  - libwebp=1.2.2
-  - libwebp-base=1.2.2
-  - libxml2=2.9.14
-  - libxslt=1.1.35
-  - libzlib=1.2.13
-  - littleutils=0.2.2
-  - llvm-openmp=12.0.1
-  - llvm-tools=11.1.0
-  - lz4-c=1.9.3
-  - mako=1.1.6
-  - markupsafe=2.0.1
-  - matplotlib-base=3.5.1
-  - matplotlib-inline=0.1.6
-  - metis=5.1.0
-  - mido=1.2.10
-  - mistune=2.0.4
-  - more-itertools=8.12.0
-  - mpfr=4.1.0
-  - mpmath=1.2.1
-  - multiprocess=0.70.13
-  - munkres=1.1.4
-  - music21=6.7.1
-  - nbclient=0.7.2
-  - nbconvert=7.2.7
-  - nbconvert-core=7.2.7
-  - nbconvert-pandoc=7.2.7
-  - nbformat=5.7.1
-  - ncurses=6.3
-  - nest-asyncio=1.5.6
-  - networkx=2.6.3
-  - nltk=3.6.7
-  - notebook=6.3.0
-  - nspr=4.33
-  - nss=3.74
-  - numexpr=2.8.0
-  - numpy=1.22.1
-  - olefile=0.46
-  - openjpeg=2.4.0
-  - openssl=1.1.1s
-  - outdated=0.2.1
-  - packaging=21.3
-  - pandas=1.3.4
-  - pandas-flavor=0.2.0
-  - pandoc=2.19.2
-  - pandocfilters=1.5.0
-  - parso=0.8.3
-  - pathos=0.2.9
-  - patsy=0.5.2
-  - pcre=8.45
-  - pexpect=4.8.0
-  - pickleshare=0.7.5
-  - pillow=8.2.0
-  - pingouin=0.5.0
-  - pip=21.3.1
-  - pkgutil-resolve-name=1.3.10
-  - pluggy=1.0.0
-  - ply=3.11
-  - pox=0.3.1
-  - ppft=1.7.6.5
-  - prometheus_client=0.15.0
-  - prompt-toolkit=3.0.36
-  - prompt_toolkit=3.0.36
-  - ptyprocess=0.7.0
-  - pure_eval=0.2.2
-  - py=1.11.0
-  - pycparser=2.21
-  - pygments=2.14.0
-  - pygpu=0.7.6
-  - pymysql=1.0.2
-  - pyopenssl=21.0.0
-  - pyparsing=3.0.7
-  - pyqt=5.15.7
-  - pyqt5-sip=12.11.0
-  - pyrsistent=0.19.3
-  - pysocks=1.7.1
-  - pytest=7.1.1
-  - pytest-runner=6.0.0
-  - python=3.9.13
-  - python-crfsuite=0.9.7
-  - python-dateutil=2.8.2
-  - python-fastjsonschema=2.16.2
-  - python-magic=0.4.24
-  - python_abi=3.9
-  - pytz=2021.3
-  - pyzmq=19.0.2
-  - qt-main=5.15.2
-  - qt-webengine=5.15.9
-  - qtconsole=5.4.0
-  - qtconsole-base=5.4.0
-  - qtpy=2.3.0
-  - qtwebkit=5.212
-  - readline=8.1
-  - regex=2022.1.18
-  - requests=2.27.1
-  - scikit-learn=0.23.2
-  - scikit-plot=0.3.7
-name: slug
-channels:
-  - r
-  - conda-forge
-  - defaults
-dependencies:
-  - _ipython_minor_entry_point=8.7.0
-  - appnope=0.1.3
-  - argon2-cffi=21.3.0
-  - argon2-cffi-bindings=21.2.0
-  - asttokens=2.2.1
-  - attrs=21.4.0
-  - backcall=0.2.0
-  - backports=1.0
-  - backports.functools_lru_cache=1.6.4
-  - beautifulsoup4=4.11.1
-  - bleach=5.0.1
-  - bottleneck=1.3.2
-  - brotli=1.0.9
-  - brotli-bin=1.0.9
-  - brotlipy=0.7.0
-  - bzip2=1.0.8
-  - ca-certificates=2022.12.7
-  - cctools_osx-64=973.0.1
-  - certifi=2022.12.7
-  - cffi=1.15.1
-  - chardet=4.0.0
-  - charset-normalizer=2.0.10
-  - clang=11.1.0
-  - clang-11=11.1.0
-  - clang_osx-64=11.1.0
-  - clangxx=11.1.0
-  - clangxx_osx-64=11.1.0
-  - click=8.0.3
-  - colorama=0.4.4
-  - compiler-rt=11.1.0
-  - compiler-rt_osx-64=11.1.0
-  - cryptography=36.0.0
-  - cvxopt=1.2.7
-  - cycler=0.11.0
-  - decorator=5.1.1
-  - defusedxml=0.7.1
-  - dill=0.3.5.1
-  - dsdp=5.8
-  - entrypoints=0.4
-  - executing=1.2.0
-  - fftw=3.3.10
-  - flit-core=3.8.0
-  - fonttools=4.29.0
-/music21
-  - libpq=12.9
-  - libsodium=1.0.18
-  - libtiff=4.2.0
-  - libwebp=1.2.2
-  - libwebp-base=1.2.2
-  - libxml2=2.9.14
-  - libxslt=1.1.35
-  - libzlib=1.2.13
-  - littleutils=0.2.2
-  - llvm-openmp=12.0.1
-  - llvm-tools=11.1.0
-  - lz4-c=1.9.3
-  - mako=1.1.6
-  - markupsafe=2.0.1
-  - matplotlib-base=3.5.1
-  - matplotlib-inline=0.1.6
-  - metis=5.1.0
-  - mido=1.2.10
-  - mistune=2.0.4
-  - more-itertools=8.12.0
-  - mpfr=4.1.0
-  - mpmath=1.2.1
-  - multiprocess=0.70.13
-  - munkres=1.1.4
-  - music21=6.7.1
-  - nbclient=0.7.2
-  - nbconvert=7.2.7
-  - nbconvert-core=7.2.7
-  - nbconvert-pandoc=7.2.7
-  - nbformat=5.7.1
-  - ncurses=6.3
-  - nest-asyncio=1.5.6
-  - networkx=2.6.3
-  - nltk=3.6.7
-  - notebook=6.3.0
-  - nspr=4.33
-  - nss=3.74
-  - numexpr=2.8.0
-  - numpy=1.22.1
-  - olefile=0.46
-  - openjpeg=2.4.0
-  - openssl=1.1.1s
-  - outdated=0.2.1
-  - packaging=21.3
-  - pandas=1.3.4
-  - pandas-flavor=0.2.0
-  - pandoc=2.19.2
-  - pandocfilters=1.5.0
-  - parso=0.8.3
-  - scikit-learn=0.23.2
-  - scikit-plot=0.3.7
-  - scipy=1.7.3
-  - seaborn=0.11.2
-  - seaborn-base=0.11.2
-  - send2trash=1.8.0
-  - setuptools=60.5.0
-  - sigtool=0.1.3
-  - sip=6.6.2
-  - six=1.16.0
-  - sklearn-crfsuite=0.3.6
-  - soupsieve=2.3.2.post1
-  - sqlite=3.40.0
-  - stack_data=0.6.2
-  - statsmodels=0.13.1
-  - suitesparse=5.10.1
-  - tabulate=0.8.9
-  - tapi=1100.0.11
-  - tatsu=4.4.0
-  - tbb=2021.5.0
-  - terminado=0.17.1
-  - theano=1.0.5
-  - threadpoolctl=3.0.0
-  - tinycss2=1.2.1
-  - tk=8.6.12
-  - toml=0.10.2
-  - tomli=2.0.1
-  - tornado=6.1
-  - tqdm=4.62.3
-  - traitlets=5.8.0
-  - typing_extensions=4.0.1
-  - tzdata=2021e
-  - unicodedata2=14.0.0
-  - urllib3=1.26.8
-  - wcwidth=0.2.5
-  - webcolors=1.11.1
-  - webencodings=0.5.1
-  - wheel=0.37.1
-  - widgetsnbextension=4.0.5
-  - xarray=0.20.2
-  - xz=5.2.5
-  - yaml=0.2.5
-  - zeromq=4.3.4
-  - zipp=3.7.0
-  - zlib=1.2.13
-  - zstd=1.5.2
+  - _ipython_minor_entry_point=8.7.0=h8cf3c4a_0
+  - appnope=0.1.3=pyhd8ed1ab_0
+  - argon2-cffi=21.3.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py39ha30fb19_3
+  - asttokens=2.2.1=pyhd8ed1ab_0
+  - attrs=21.4.0=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=pyhd8ed1ab_3
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - beautifulsoup4=4.11.1=pyha770c72_0
+  - bleach=5.0.1=pyhd8ed1ab_0
+  - bottleneck=1.3.2=py39hc89836e_5
+  - brotli=1.0.9=h0d85af4_6
+  - brotli-bin=1.0.9=h0d85af4_6
+  - brotlipy=0.7.0=py39h89e85a6_1003
+  - bzip2=1.0.8=h0d85af4_4
+  - ca-certificates=2022.12.7=h033912b_0
+  - cctools_osx-64=973.0.1=hb41342b_5
+  - certifi=2022.12.7=pyhd8ed1ab_0
+  - cffi=1.15.1=py39hc55c11b_0
+  - chardet=4.0.0=py39h6e9494a_2
+  - charset-normalizer=2.0.10=pyhd8ed1ab_0
+  - clang=11.1.0=h694c41f_1
+  - clang-11=11.1.0=default_he082bbe_1
+  - clang_osx-64=11.1.0=hc8532ff_6
+  - clangxx=11.1.0=default_he082bbe_1
+  - clangxx_osx-64=11.1.0=h2c55bc3_6
+  - click=8.0.3=py39h6e9494a_1
+  - colorama=0.4.4=pyh9f0ad1d_0
+  - compiler-rt=11.1.0=h654b07c_0
+  - compiler-rt_osx-64=11.1.0=h8c5fa43_0
+  - cryptography=36.0.0=py39hf6deb26_0
+  - cvxopt=1.2.7=py39h3314f5d_1
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - dill=0.3.5.1=pyhd8ed1ab_0
+  - dsdp=5.8=h6e329d1_1203
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - executing=1.2.0=pyhd8ed1ab_0
+  - fftw=3.3.10=nompi_hf082fe4_102
+  - flit-core=3.8.0=pyhd8ed1ab_0
+  - fonttools=4.29.0=py39h89e85a6_0
+  - freetype=2.10.4=h4cff582_1
+  - gettext=0.21.1=h8a4c099_0
+  - giflib=5.2.1=hbcb3906_2
+  - glib=2.69.1=h8346a28_1
+  - glpk=4.65=h0f52abe_1004
+  - gmp=6.2.1=h2e338ed_0
+  - gsl=2.7=h93259b0_0
+  - gst-plugins-base=1.14.0=h4180768_2
+  - gstreamer=1.14.0=h0fc69c2_2
+  - icu=58.2=h0a44026_1000
+  - idna=3.3=pyhd8ed1ab_0
+  - importlib-metadata=4.10.1=py39h6e9494a_0
+  - importlib_metadata=4.10.1=hd8ed1ab_0
+  - importlib_resources=5.10.2=pyhd8ed1ab_0
+  - iniconfig=1.1.1=pyh9f0ad1d_0
+  - ipykernel=5.5.5=py39h71a6800_0
+  - ipython=8.7.0=pyhd1c38e8_0
+  - ipython_genutils=0.2.0=py_1
+  - ipywidgets=8.0.4=pyhd8ed1ab_0
+  - jedi=0.18.2=pyhd8ed1ab_0
+  - jinja2=3.1.2=pyhd8ed1ab_1
+  - joblib=1.1.0=pyhd8ed1ab_0
+  - jpeg=9e=hac89ed1_2
+  - jsonpickle=2.1.0=pyhd8ed1ab_0
+  - jsonschema=4.17.3=pyhd8ed1ab_0
+  - jupyter=1.0.0=py39h6e9494a_8
+  - jupyter_client=7.0.6=pyhd8ed1ab_0
+  - jupyter_console=6.4.4=pyhd8ed1ab_0
+  - jupyter_core=4.12.0=py39h6e9494a_0
+  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
+  - jupyterlab_widgets=3.0.5=pyhd8ed1ab_0
+  - kiwisolver=1.3.2=py39hf018cea_1
+  - krb5=1.19.3=hb49756b_0
+  - lcms2=2.12=h577c468_0
+  - ld64_osx-64=609=h6adca69_5
+  - libblas=3.9.0=13_osx64_openblas
+  - libbrotlicommon=1.0.9=h0d85af4_6
+  - libbrotlidec=1.0.9=h0d85af4_6
+  - libbrotlienc=1.0.9=h0d85af4_6
+  - libcblas=3.9.0=13_osx64_openblas
+  - libclang=12.0.0=default_hbc2896b_2
+  - libclang-cpp11.1=11.1.0=default_he082bbe_1
+  - libcxx=12.0.1=habf9029_1
+  - libdeflate=1.9=h0d85af4_0
+  - libedit=3.1.20191231=h0678c8f_2
+  - libffi=3.3=h046ec9c_2
+  - libgfortran=5.0.0=9_3_0_h6c81a4c_23
+  - libgfortran5=9.3.0=h6c81a4c_23
+  - libgpuarray=0.7.6=h0d85af4_1003
+  - libiconv=1.17=hac89ed1_0
+  - liblapack=3.9.0=13_osx64_openblas
+  - libllvm11=11.1.0=hd011deb_2
+  - libllvm12=12.0.1=hd011deb_2
+  - libmagic=5.39=haaf19a9_0
+  - libopenblas=0.3.18=openmp_h3351f45_0
+  - libpng=1.6.37=h7cec526_2
+  - libpq=12.9=h1c9f633_3
+  - libsodium=1.0.18=hbcb3906_1
+  - libtiff=4.2.0=h1167814_3
+  - libwebp=1.2.2=h56c3ce4_0
+  - libwebp-base=1.2.2=h0d85af4_1
+  - libxml2=2.9.14=hbf8cd5e_0
+  - libxslt=1.1.35=h5b33f42_0
+  - libzlib=1.2.13=hfd90126_4
+  - littleutils=0.2.2=py_0
+  - llvm-openmp=12.0.1=hda6cdc1_1
+  - llvm-tools=11.1.0=hd011deb_2
+  - lz4-c=1.9.3=he49afe7_1
+  - mako=1.1.6=pyhd8ed1ab_0
+  - markupsafe=2.0.1=py39h89e85a6_1
+  - matplotlib-base=3.5.1=py39hb07454d_0
+  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
+  - metis=5.1.0=h2e338ed_1006
+  - mido=1.2.10=pyhd8ed1ab_0
+  - mistune=2.0.4=pyhd8ed1ab_0
+  - more-itertools=8.12.0=pyhd8ed1ab_0
+  - mpfr=4.1.0=h0f52abe_1
+  - mpmath=1.2.1=pyhd8ed1ab_0
+  - multiprocess=0.70.13=py39h701faf5_1
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - music21=6.7.1=pyhd8ed1ab_0
+  - nbclient=0.7.2=pyhd8ed1ab_0
+  - nbconvert=7.2.7=pyhd8ed1ab_0
+  - nbconvert-core=7.2.7=pyhd8ed1ab_0
+  - nbconvert-pandoc=7.2.7=pyhd8ed1ab_0
+  - nbformat=5.7.1=pyhd8ed1ab_0
+  - ncurses=6.3=he49afe7_0
+  - nest-asyncio=1.5.6=pyhd8ed1ab_0
+  - networkx=2.6.3=pyhd8ed1ab_1
+  - nltk=3.6.7=pyhd8ed1ab_0
+  - notebook=6.3.0=py39h6e9494a_0
+  - nspr=4.33=he9d5cce_0
+  - nss=3.74=h47edf6a_0
+  - numexpr=2.8.0=py39h4d6be9b_1
+  - numpy=1.22.1=py39h9d9ce41_0
+  - olefile=0.46=pyh9f0ad1d_1
+  - openjpeg=2.4.0=h6e7aa92_1
+  - openssl=1.1.1s=hfd90126_1
+  - outdated=0.2.1=pyhd8ed1ab_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - pandas=1.3.4=py39h743cdd8_0
+  - pandas-flavor=0.2.0=py_0
+  - pandoc=2.19.2=h694c41f_1
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pathos=0.2.9=pyhd8ed1ab_0
+  - patsy=0.5.2=pyhd8ed1ab_0
+  - pcre=8.45=he49afe7_0
+  - pexpect=4.8.0=pyh1a96a4e_2
+  - pickleshare=0.7.5=py_1003
+  - pillow=8.2.0=py39h5fdd921_1
+  - pingouin=0.5.0=pyhd8ed1ab_0
+  - pip=21.3.1=pyhd8ed1ab_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
+  - pluggy=1.0.0=py39h6e9494a_3
+  - ply=3.11=py_1
+  - pox=0.3.1=pyhd8ed1ab_0
+  - ppft=1.7.6.5=pyhd8ed1ab_0
+  - prometheus_client=0.15.0=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.36=pyha770c72_0
+  - prompt_toolkit=3.0.36=hd8ed1ab_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - py=1.11.0=pyh6c4a22f_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pygments=2.14.0=pyhd8ed1ab_0
+  - pygpu=0.7.6=py39hc89836e_1003
+  - pymysql=1.0.2=pyhd8ed1ab_0
+  - pyopenssl=21.0.0=pyhd8ed1ab_0
+  - pyparsing=3.0.7=pyhd8ed1ab_0
+  - pyqt=5.15.7=py39he9d5cce_0
+  - pyqt5-sip=12.11.0=py39he9d5cce_0
+  - pyrsistent=0.19.3=py39ha30fb19_0
+  - pysocks=1.7.1=py39h6e9494a_4
+  - pytest=7.1.1=py39h6e9494a_1
+  - pytest-runner=6.0.0=pyhd8ed1ab_0
+  - python=3.9.13=hdfd78df_1
+  - python-crfsuite=0.9.7=py39hdbc963e_1
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-fastjsonschema=2.16.2=pyhd8ed1ab_0
+  - python-magic=0.4.24=py39h6e9494a_1
+  - python_abi=3.9=2_cp39
+  - pytz=2021.3=pyhd8ed1ab_0
+  - pyzmq=19.0.2=py39he75b00d_2
+  - qt-main=5.15.2=h719ae48_7
+  - qt-webengine=5.15.9=h90a370e_4
+  - qtconsole=5.4.0=pyhd8ed1ab_0
+  - qtconsole-base=5.4.0=pyha770c72_0
+  - qtpy=2.3.0=pyhd8ed1ab_0
+  - qtwebkit=5.212=h24dc246_4
+  - readline=8.1=h05e3726_0
+  - regex=2022.1.18=py39h89e85a6_0
+  - requests=2.27.1=pyhd8ed1ab_0
+  - scikit-learn=0.23.2=py39hcaaab68_3
+  - scikit-plot=0.3.7=py_1
+  - scipy=1.7.3=py39h056f1c0_0
+  - seaborn=0.11.2=hd8ed1ab_0
+  - seaborn-base=0.11.2=pyhd8ed1ab_0
+  - send2trash=1.8.0=pyhd8ed1ab_0
+  - setuptools=60.5.0=py39h6e9494a_0
+  - sigtool=0.1.3=h57ddcff_0
+  - sip=6.6.2=py39he9d5cce_0
+  - six=1.16.0=pyh6c4a22f_0
+  - sklearn-crfsuite=0.3.6=pyh9f0ad1d_0
+  - soupsieve=2.3.2.post1=pyhd8ed1ab_0
+  - sqlite=3.40.0=h880c91c_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
+  - statsmodels=0.13.1=py39hc89836e_0
+  - suitesparse=5.10.1=h7aff33d_1
+  - tabulate=0.8.9=pyhd8ed1ab_0
+  - tapi=1100.0.11=h9ce4665_0
+  - tatsu=4.4.0=py39hde42818_2
+  - tbb=2021.5.0=h940c156_0
+  - terminado=0.17.1=pyhd1c38e8_0
+  - theano=1.0.5=py39h9fcab8e_2
+  - threadpoolctl=3.0.0=pyh8a188c0_0
+  - tinycss2=1.2.1=pyhd8ed1ab_0
+  - tk=8.6.12=h5dbffcc_0
+  - toml=0.10.2=pyhd8ed1ab_0
+  - tomli=2.0.1=pyhd8ed1ab_0
+  - tornado=6.1=py39h89e85a6_2
+  - tqdm=4.62.3=pyhd8ed1ab_0
+  - traitlets=5.8.0=pyhd8ed1ab_0
+  - typing_extensions=4.0.1=pyha770c72_0
+  - tzdata=2021e=he74cb21_0
+  - unicodedata2=14.0.0=py39h89e85a6_0
+  - urllib3=1.26.8=pyhd8ed1ab_1
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - webcolors=1.11.1=pyhd8ed1ab_0
+  - webencodings=0.5.1=py_1
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - widgetsnbextension=4.0.5=pyhd8ed1ab_0
+  - xarray=0.20.2=pyhd8ed1ab_0
+  - xz=5.2.5=haf1e3a3_1
+  - yaml=0.2.5=h0d85af4_2
+  - zeromq=4.3.4=he49afe7_1
+  - zipp=3.7.0=pyhd8ed1ab_0
+  - zlib=1.2.13=hfd90126_4
+  - zstd=1.5.2=h582d3a0_0
   - pip:
       - krippendorff==0.5.1
